# crewai-poemflow

./: README.md  poem.txt  pyproject.toml
src/poem1/: main.py
